# electoral-drift

./: .env.example  .gitignore  AGENTS.md  DB_CONFIG.md  README.md  alembic.ini  docker-compose.yml  flow.md  pyproject.toml
apps/api/: pyproject.toml
apps/api/app/: main.py
apps/api/app/core/: __init__.py  dependencies.py
apps/api/app/routers/: elections.py  regions.py
apps/api/app/schemas/: elections.py  regions.py
apps/api/app/services/: elections.py  regions.py
apps/api/tests/: test_elections.py  test_regions.py
docs/: api_contract.md  database_design.md  ingestion.md
