[project]
name = "electoral-api"
version = "0.1.0"
description = "FastAPI service for electoral drift data."
requires-python = ">=3.14"
dependencies = [
    "electoral-db",
    "fastapi>=0.115.0",
    "pydantic>=2.10.0",
    "uvicorn[standard]>=0.32.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv.sources]
electoral-db = { workspace = true }
